fix: text overflow

--- a/web/src/pages/Project/component/project-list.less
+++ b/web/src/pages/Project/component/project-list.less
@@ -17,3 +17,9 @@
   position: absolute;
   bottom: 0;
 }
+
+.des-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
